--- a/partials/sites.html
+++ b/partials/sites.html
@@ -1,5 +1,5 @@
 
-<div class="jumbotron">
+<div ng-show="noSitesFound" class="jumbotron ng-hide">
   <h1>No sites found.</h1>
   <p class="lead">Click the button below to get started and scan the configured paths for Wordpress site installations!</p>
   <p><a class="btn btn-lg btn-success" href="#" role="button">Scan for installs</a></p>
