--- a/partials/sites.html
+++ b/partials/sites.html
@@ -2,9 +2,9 @@
 <div ng-show="noSitesFound" class="jumbotron ng-hide">
   <h1>No sites found.</h1>
   <p class="lead">Click the button below to get started and scan the configured paths for Wordpress site installations!</p>
-  <p><a class="btn btn-lg btn-success" href="#" role="button"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Scan for sites</a></p>
+  <p><a class="btn btn-lg btn-success" href="#/sites/scan" role="button"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Scan for sites</a></p>
 </div>
-
+<!--
 <div class="row marketing">
   <div class="col-lg-6">
     <h4>Subheading</h4>
@@ -28,3 +28,4 @@
     <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
   </div>
 </div>
+-->
