--- a/partials/scan.html
+++ b/partials/scan.html
@@ -15,18 +15,16 @@
 </div>
 
 <div ng-show="showScanResults" class="row marketing">
-  <div class="col-xs-12 col-sm-6">
+  <div class="col-xs-12 col-sm-12">
     <h4>Installations found:</h4>
-    <ul class="list-unstyled" style="padding-left: 30px; line-height: 2em">
-      <li><i class="fa fa-folder-open"></i> path 1</li>
-      <li><i class="fa fa-wordpress"></i> path 2</li>
-      <li><i class="fa fa-wordpress"></i> path 3  <span class="label label-success">NEW</span></li>
-    </ul>
-  </div>
-  <div class="col-xs-12 col-sm-6">
-    <h4>Paths scanned:</h4>
-    <ul class="list-unstyled" style="padding-left: 30px; line-height: 2em">
-      <li ng-repeat="path in paths"><i class="fa fa-folder"></i> {{path}}</li>
+    <ul class="list-unstyled" style="padding-left: 15px; line-height: 2em">
+      <li ng-repeat="(path, results) in installationsFound"><i class="fa fa-folder-open"></i> {{path}}
+        <ul>
+          <li ng-repeat="(fullPath, fileName) in results">
+            <i class="fa fa-wordpress"></i> {{fullPath}}
+          </li>
+      </li>
+
     </ul>
   </div>
 </div>
